--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -63,7 +63,7 @@ $cpl-negative-2: #faaa65;
 $cpl-negative-3: #f1625f;
 // <== Paleta de Colores ==> //
 
-$primary: #00563b;
+$primary: #b16655;
 $secondary: $cpl-blue-5;
 $accent: $cpl-yellow-5;
 
