Mejoras de versión

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -61,7 +61,7 @@ html {
 ::-webkit-scrollbar-thumb {
   height: 5px;
   width: 2px;
-  background-color: $cpl-blue-base;
+  background-color: #b16655;
   border-radius: 3px;
   box-shadow: 0 3px 6px -2px rgba(51, 0, 51, 0.5);
 }
